<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.interjava.hangman.hangdroid.MainActivity"
    tools:showIn="@layout/activity_main">

    <ProgressBar
        android:id="@+id/connect_game_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="visible" />

    <ScrollView
        android:id="@+id/game_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/attempts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/attempts" />

            <TextView
                android:id="@+id/word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/attempts"
                android:layout_centerHorizontal="true"
                android:text="_______."
                android:textSize="32sp" />

            <TextView
                android:id="@+id/letter_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/word"
                android:text="@string/letter_word" />

            <EditText
                android:id="@+id/letter"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/word"
                android:layout_toRightOf="@id/letter_label"
                android:inputType="textCapWords" />

            <Button
                android:id="@+id/guess_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/letter"
                android:layout_centerHorizontal="true"
                android:text="@string/guess" />

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/guess_button"
                android:layout_centerHorizontal="true"
                android:text="@string/score" />

            <ProgressBar
                android:id="@+id/guess_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/score"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="4dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/guess_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/guess_progress"
                android:layout_centerHorizontal="true"
                android:text="" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/guess_label"
                android:layout_centerHorizontal="true"
                android:text="@string/cancel" />

        </RelativeLayout>
    </ScrollView>
</LinearLayout>
